// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage renders 1`] = `
.c1 {
  background-color: #dde1e4;
}

.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url(https://images.unsplash.com/photo-1416339684178-3a239570f315?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max);
}

<div
  aria-label="Wooden desk with tools and chair"
  className="c0 c1"
  src="https://images.unsplash.com/photo-1416339684178-3a239570f315?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max"
/>
`;

exports[`BackgroundImage renders with height 1`] = `
.c1 {
  background-color: #dde1e4;
}

.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url(https://images.unsplash.com/photo-1416339684178-3a239570f315?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max);
  height: 256px;
}

<div
  aria-label="Wooden desk with tools and chair"
  className="c0 c1"
  src="https://images.unsplash.com/photo-1416339684178-3a239570f315?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max"
/>
`;

exports[`BackgroundImage scale 1`] = `
.c1 {
  background-color: #dde1e4;
}

.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url(https://images.unsplash.com/photo-1416339684178-3a239570f315?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max);
  overflow: hidden;
  -webkit-transition: 0.1875s cubic-bezier(0.375,0,0.675,1) background-size;
  transition: 0.1875s cubic-bezier(0.375,0,0.675,1) background-size;
  will-change: background-size;
  background-size: auto 106.25%;
}

.c0:hover {
  background-size: auto 112.5%;
}

@media (prefers-reduced-motion:reduce) {
  .c0 {
    -webkit-transition: none;
    transition: none;
    background-size: cover !important;
  }
}

<div
  aria-label="Wooden desk with tools and chair"
  className="c0 c1"
  scale={true}
  src="https://images.unsplash.com/photo-1416339684178-3a239570f315?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max"
/>
`;
